--- a/documentazione/latex/files.tex
+++ b/documentazione/latex/files.tex
@@ -1,4 +1,129 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{helloWord_8c}{hello\+Word.\+c}} }{\pageref{helloWord_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+1/\mbox{\hyperlink{10-if-e-cicli_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{10-if-e-cicli_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+10/\mbox{\hyperlink{10-if-e-cicli_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{10-if-e-cicli_2es__10_2es__10_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+2/\mbox{\hyperlink{10-if-e-cicli_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{10-if-e-cicli_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+4/\mbox{\hyperlink{10-if-e-cicli_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{10-if-e-cicli_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+5/\mbox{\hyperlink{10-if-e-cicli_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{10-if-e-cicli_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+6/\mbox{\hyperlink{10-if-e-cicli_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{10-if-e-cicli_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+6/\mbox{\hyperlink{es__6__V2_8c}{es\+\_\+6\+\_\+\+V2.\+c}} }{\pageref{es__6__V2_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+8/\mbox{\hyperlink{10-if-e-cicli_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{10-if-e-cicli_2es__8_2es__8_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+9/\mbox{\hyperlink{10-if-e-cicli_2es__9_2es__9_8c}{es\+\_\+9.\+c}} }{\pageref{10-if-e-cicli_2es__9_2es__9_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+9/\mbox{\hyperlink{es__9__puntatori_8c}{es\+\_\+9\+\_\+puntatori.\+c}} }{\pageref{es__9__puntatori_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+1/\mbox{\hyperlink{11-iterazione_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{11-iterazione_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+10/\mbox{\hyperlink{11-iterazione_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{11-iterazione_2es__10_2es__10_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+11/\mbox{\hyperlink{11-iterazione_2es__11_2es__11_8c}{es\+\_\+11.\+c}} }{\pageref{11-iterazione_2es__11_2es__11_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+12/\mbox{\hyperlink{es__12_8c}{es\+\_\+12.\+c}} }{\pageref{es__12_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+14/\mbox{\hyperlink{es__14_8c}{es\+\_\+14.\+c}} }{\pageref{es__14_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+18/\mbox{\hyperlink{es__18_8c}{es\+\_\+18.\+c}} }{\pageref{es__18_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+2/\mbox{\hyperlink{11-iterazione_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{11-iterazione_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+21/\mbox{\hyperlink{es__21_8c}{es\+\_\+21.\+c}} }{\pageref{es__21_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+21/\mbox{\hyperlink{es__21__ciclo__for_8c}{es\+\_\+21\+\_\+ciclo\+\_\+for.\+c}} }{\pageref{es__21__ciclo__for_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+22/\mbox{\hyperlink{es__22_8c}{es\+\_\+22.\+c}} }{\pageref{es__22_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+3/\mbox{\hyperlink{11-iterazione_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{11-iterazione_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+30/\mbox{\hyperlink{es__30_8c}{es\+\_\+30.\+c}} }{\pageref{es__30_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+4/\mbox{\hyperlink{11-iterazione_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{11-iterazione_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+5/\mbox{\hyperlink{11-iterazione_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{11-iterazione_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+6/\mbox{\hyperlink{11-iterazione_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{11-iterazione_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+7/\mbox{\hyperlink{11-iterazione_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{11-iterazione_2es__7_2es__7_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+8/\mbox{\hyperlink{11-iterazione_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{11-iterazione_2es__8_2es__8_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+9/\mbox{\hyperlink{11-iterazione_2es__9_2es__9_8c}{es\+\_\+9.\+c}} }{\pageref{11-iterazione_2es__9_2es__9_8c}}{}
+\item\contentsline{section}{12-\/argc-\/argv/es\+\_\+1/\mbox{\hyperlink{12-argc-argv_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{12-argc-argv_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{12-\/argc-\/argv/es\+\_\+2/\mbox{\hyperlink{12-argc-argv_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{12-argc-argv_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+1/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+10/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__10_2es__10_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+10/\mbox{\hyperlink{es__10__V2_8c}{es\+\_\+10\+\_\+\+V2.\+c}} }{\pageref{es__10__V2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+2/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+3/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+4/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+5/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+6/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+7/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__7_2es__7_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+8/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__8_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__8_2es__3_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+1/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+1/\mbox{\hyperlink{es__1__argv__argc_8c}{es\+\_\+1\+\_\+argv\+\_\+argc.\+c}} }{\pageref{es__1__argv__argc_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+2/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+3/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+4/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+5/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+6/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+6/\mbox{\hyperlink{es__6__v2_8c}{es\+\_\+6\+\_\+v2.\+c}} }{\pageref{es__6__v2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+7/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__7_2es__7_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+8/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__8_2es__8_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+9/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__9_2es__9_8c}{es\+\_\+9.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__9_2es__9_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+1/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+2/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+3/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+3/\mbox{\hyperlink{es__3__asterisco_8c}{es\+\_\+3\+\_\+asterisco.\+c}} }{\pageref{es__3__asterisco_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+3/\mbox{\hyperlink{es__3__bis_8c}{es\+\_\+3\+\_\+bis.\+c}} }{\pageref{es__3__bis_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+4/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+4/\mbox{\hyperlink{es__4__scopri__gli__errori__e__correggili_8c}{es\+\_\+4\+\_\+scopri\+\_\+gli\+\_\+errori\+\_\+e\+\_\+correggili.\+c}} }{\pageref{es__4__scopri__gli__errori__e__correggili_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+5/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/puntatori/es\+\_\+6/\mbox{\hyperlink{Array-Puntatori-Funzioni_2puntatori_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{Array-Puntatori-Funzioni_2puntatori_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{file/es\+\_\+1/\mbox{\hyperlink{file_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{file_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{file/es\+\_\+2/\mbox{\hyperlink{file_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{file_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{file/es\+\_\+3/\mbox{\hyperlink{file_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{file_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{file/es\+\_\+4/\mbox{\hyperlink{file_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{file_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{file/es\+\_\+5/\mbox{\hyperlink{file_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{file_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{file/es\+\_\+6/\mbox{\hyperlink{file_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{file_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{fork/es\+\_\+1/\mbox{\hyperlink{fork_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{fork_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{fork/es\+\_\+2/\mbox{\hyperlink{fork_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{fork_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{fork/es\+\_\+3/\mbox{\hyperlink{fork_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{fork_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{fork/es\+\_\+4/\mbox{\hyperlink{fork_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{fork_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{fork/es\+\_\+5/\mbox{\hyperlink{fork_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{fork_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{fork/pipe/es\+\_\+1/\mbox{\hyperlink{fork_2pipe_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{fork_2pipe_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{fork/pipe/es\+\_\+2/\mbox{\hyperlink{fork_2pipe_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{fork_2pipe_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{fork/pipe/es\+\_\+2/\mbox{\hyperlink{es__2__V2_8c}{es\+\_\+2\+\_\+\+V2.\+c}} }{\pageref{es__2__V2_8c}}{}
+\item\contentsline{section}{fork/pipe/es\+\_\+3/\mbox{\hyperlink{fork_2pipe_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{fork_2pipe_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+1/\mbox{\hyperlink{programmazione-di-sistema_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{programmazione-di-sistema_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+10/\mbox{\hyperlink{programmazione-di-sistema_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{programmazione-di-sistema_2es__10_2es__10_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+11/\mbox{\hyperlink{programmazione-di-sistema_2es__11_2es__11_8c}{es\+\_\+11.\+c}} }{\pageref{programmazione-di-sistema_2es__11_2es__11_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+2/\mbox{\hyperlink{programmazione-di-sistema_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{programmazione-di-sistema_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+2/\mbox{\hyperlink{es__2__senza__tee_8c}{es\+\_\+2\+\_\+senza\+\_\+tee.\+c}} }{\pageref{es__2__senza__tee_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+3/\mbox{\hyperlink{programmazione-di-sistema_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{programmazione-di-sistema_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+4/\mbox{\hyperlink{programmazione-di-sistema_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{programmazione-di-sistema_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+5/\mbox{\hyperlink{programmazione-di-sistema_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{programmazione-di-sistema_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+5/\mbox{\hyperlink{es__5__due__processi_8c}{es\+\_\+5\+\_\+due\+\_\+processi.\+c}} }{\pageref{es__5__due__processi_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+6/\mbox{\hyperlink{programmazione-di-sistema_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{programmazione-di-sistema_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+7/\mbox{\hyperlink{programmazione-di-sistema_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{programmazione-di-sistema_2es__7_2es__7_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+8/\mbox{\hyperlink{programmazione-di-sistema_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{programmazione-di-sistema_2es__8_2es__8_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+9/\mbox{\hyperlink{programmazione-di-sistema_2es__9_2es__9_8c}{es\+\_\+9.\+c}} }{\pageref{programmazione-di-sistema_2es__9_2es__9_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+9/\mbox{\hyperlink{es__9__cat__only__P1_8c}{es\+\_\+9\+\_\+cat\+\_\+only\+\_\+\+P1.\+c}} }{\pageref{es__9__cat__only__P1_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+9/\mbox{\hyperlink{es__9__cat__p2_8c}{es\+\_\+9\+\_\+cat\+\_\+p2.\+c}} }{\pageref{es__9__cat__p2_8c}}{}
+\item\contentsline{section}{programmazione-\/di-\/sistema/es\+\_\+9/\mbox{\hyperlink{es__9__exec_8c}{es\+\_\+9\+\_\+exec.\+c}} }{\pageref{es__9__exec_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+1/\mbox{\hyperlink{es__1_2client_8c}{client.\+c}} }{\pageref{es__1_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+1/\mbox{\hyperlink{es__1_2server_8c}{server.\+c}} }{\pageref{es__1_2server_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+2/\mbox{\hyperlink{es__2_2client_8c}{client.\+c}} }{\pageref{es__2_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+2/\mbox{\hyperlink{es__2_2server_8c}{server.\+c}} }{\pageref{es__2_2server_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+3/\mbox{\hyperlink{clientRubrica_8c}{client\+Rubrica.\+c}} }{\pageref{clientRubrica_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+3/\mbox{\hyperlink{serverRubrica_8c}{server\+Rubrica.\+c}} }{\pageref{serverRubrica_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+3/\mbox{\hyperlink{serverRubricaConcorrente_8c}{server\+Rubrica\+Concorrente.\+c}} }{\pageref{serverRubricaConcorrente_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+4/\mbox{\hyperlink{es__4_2client_8c}{client.\+c}} }{\pageref{es__4_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+4/\mbox{\hyperlink{es__4_2server_8c}{server.\+c}} }{\pageref{es__4_2server_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+5/\mbox{\hyperlink{es__5_2client_8c}{client.\+c}} }{\pageref{es__5_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+5/\mbox{\hyperlink{es__5_2server_8c}{server.\+c}} }{\pageref{es__5_2server_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+6/\mbox{\hyperlink{es__6_2client_8c}{client.\+c}} }{\pageref{es__6_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+6/\mbox{\hyperlink{es__6_2server_8c}{server.\+c}} }{\pageref{es__6_2server_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+7/\mbox{\hyperlink{es__7_2client_8c}{client.\+c}} }{\pageref{es__7_2client_8c}}{}
+\item\contentsline{section}{socket/es\+\_\+7/\mbox{\hyperlink{es__7_2server_8c}{server.\+c}} }{\pageref{es__7_2server_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+1/\mbox{\hyperlink{soluzione__con__struct_8c}{soluzione\+\_\+con\+\_\+struct.\+c}} }{\pageref{soluzione__con__struct_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+1/\mbox{\hyperlink{soluzione__con__struct__v2_8c}{soluzione\+\_\+con\+\_\+struct\+\_\+v2.\+c}} }{\pageref{soluzione__con__struct__v2_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+1/\mbox{\hyperlink{soluzione__senza__struc_8c}{soluzione\+\_\+senza\+\_\+struc.\+c}} }{\pageref{soluzione__senza__struc_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+2/\mbox{\hyperlink{struct_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{struct_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+4/\mbox{\hyperlink{struct_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{struct_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+4/\mbox{\hyperlink{es__4__funzioni_8c}{es\+\_\+4\+\_\+funzioni.\+c}} }{\pageref{es__4__funzioni_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+5/\mbox{\hyperlink{struct_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{struct_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+6/\mbox{\hyperlink{struct_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{struct_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+6/\mbox{\hyperlink{es__6__documentato__inglese_8c}{es\+\_\+6\+\_\+documentato\+\_\+inglese.\+c}} }{\pageref{es__6__documentato__inglese_8c}}{}
+\item\contentsline{section}{struct/es\+\_\+7/\mbox{\hyperlink{struct_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{struct_2es__7_2es__7_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+1/\mbox{\hyperlink{systemcall-esercizi-base_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{systemcall-esercizi-base_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+2/\mbox{\hyperlink{systemcall-esercizi-base_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{systemcall-esercizi-base_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+3/\mbox{\hyperlink{systemcall-esercizi-base_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{systemcall-esercizi-base_2es__3_2es__3_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+4/\mbox{\hyperlink{systemcall-esercizi-base_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{systemcall-esercizi-base_2es__4_2es__4_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+5/\mbox{\hyperlink{systemcall-esercizi-base_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{systemcall-esercizi-base_2es__5_2es__5_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/es\+\_\+6/\mbox{\hyperlink{systemcall-esercizi-base_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{systemcall-esercizi-base_2es__6_2es__6_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/exec/es\+\_\+1/\mbox{\hyperlink{systemcall-esercizi-base_2exec_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{systemcall-esercizi-base_2exec_2es__1_2es__1_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/exec/es\+\_\+2/\mbox{\hyperlink{systemcall-esercizi-base_2exec_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{systemcall-esercizi-base_2exec_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{systemcall-\/esercizi-\/base/exec/es\+\_\+3/\mbox{\hyperlink{systemcall-esercizi-base_2exec_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{systemcall-esercizi-base_2exec_2es__3_2es__3_8c}}{}
 \end{DoxyCompactList}
