--- a/documentazione/latex/md_README.tex
+++ b/documentazione/latex/md_README.tex
@@ -26,4 +26,13 @@ to compile with the math.\+h library\+:
 
 to compile with standard filename a.\+out and execute in the same line\+:
 
-{\ttfamily \$ gcc exercise.\+c ; ./a.out} 
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{ \{\$\}}
+\DoxyCodeLine{}
+\DoxyCodeLine{documentation:}
+\DoxyCodeLine{}
+\DoxyCodeLine{```\$ documentazione/html}
+
+\end{DoxyCode}
+ 
