--- a/documentazione/latex/refman.tex
+++ b/documentazione/latex/refman.tex
@@ -175,11 +175,150 @@
 \label{md_README}
 \Hypertarget{md_README}
 \input{md_README}
+\chapter{Class Index}
+\input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Class Documentation}
+\input{structcalciatore__t}
+\input{structContatto__t}
+\input{structGiocatore__t}
+\input{structPerson__T}
+\input{structpersona__t}
+\input{structPersona__t}
+\input{structprodotto__t}
+\input{structstudente__t}
+\input{structtipo__materia}
+\input{structtipo__studente}
+\input{structtipo__studente__con__media}
 \chapter{File Documentation}
+\input{10-if-e-cicli_2es__1_2es__1_8c}
+\input{11-iterazione_2es__1_2es__1_8c}
+\input{12-argc-argv_2es__1_2es__1_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__1_2es__1_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__1_2es__1_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__1_2es__1_8c}
+\input{file_2es__1_2es__1_8c}
+\input{fork_2es__1_2es__1_8c}
+\input{fork_2pipe_2es__1_2es__1_8c}
+\input{programmazione-di-sistema_2es__1_2es__1_8c}
+\input{systemcall-esercizi-base_2es__1_2es__1_8c}
+\input{systemcall-esercizi-base_2exec_2es__1_2es__1_8c}
+\input{10-if-e-cicli_2es__10_2es__10_8c}
+\input{11-iterazione_2es__10_2es__10_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__10_2es__10_8c}
+\input{programmazione-di-sistema_2es__10_2es__10_8c}
+\input{10-if-e-cicli_2es__2_2es__2_8c}
+\input{11-iterazione_2es__2_2es__2_8c}
+\input{12-argc-argv_2es__2_2es__2_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__2_2es__2_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__2_2es__2_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__2_2es__2_8c}
+\input{file_2es__2_2es__2_8c}
+\input{fork_2es__2_2es__2_8c}
+\input{fork_2pipe_2es__2_2es__2_8c}
+\input{programmazione-di-sistema_2es__2_2es__2_8c}
+\input{struct_2es__2_2es__2_8c}
+\input{systemcall-esercizi-base_2es__2_2es__2_8c}
+\input{systemcall-esercizi-base_2exec_2es__2_2es__2_8c}
+\input{10-if-e-cicli_2es__4_2es__4_8c}
+\input{11-iterazione_2es__4_2es__4_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__4_2es__4_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__4_2es__4_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__4_2es__4_8c}
+\input{file_2es__4_2es__4_8c}
+\input{fork_2es__4_2es__4_8c}
+\input{programmazione-di-sistema_2es__4_2es__4_8c}
+\input{struct_2es__4_2es__4_8c}
+\input{systemcall-esercizi-base_2es__4_2es__4_8c}
+\input{10-if-e-cicli_2es__5_2es__5_8c}
+\input{11-iterazione_2es__5_2es__5_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__5_2es__5_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__5_2es__5_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__5_2es__5_8c}
+\input{file_2es__5_2es__5_8c}
+\input{fork_2es__5_2es__5_8c}
+\input{programmazione-di-sistema_2es__5_2es__5_8c}
+\input{struct_2es__5_2es__5_8c}
+\input{systemcall-esercizi-base_2es__5_2es__5_8c}
+\input{10-if-e-cicli_2es__6_2es__6_8c}
+\input{11-iterazione_2es__6_2es__6_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__6_2es__6_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__6_2es__6_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__6_2es__6_8c}
+\input{file_2es__6_2es__6_8c}
+\input{programmazione-di-sistema_2es__6_2es__6_8c}
+\input{struct_2es__6_2es__6_8c}
+\input{systemcall-esercizi-base_2es__6_2es__6_8c}
+\input{es__6__V2_8c}
+\input{10-if-e-cicli_2es__8_2es__8_8c}
+\input{11-iterazione_2es__8_2es__8_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__8_2es__8_8c}
+\input{programmazione-di-sistema_2es__8_2es__8_8c}
+\input{10-if-e-cicli_2es__9_2es__9_8c}
+\input{11-iterazione_2es__9_2es__9_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__9_2es__9_8c}
+\input{programmazione-di-sistema_2es__9_2es__9_8c}
+\input{es__9__puntatori_8c}
+\input{11-iterazione_2es__11_2es__11_8c}
+\input{programmazione-di-sistema_2es__11_2es__11_8c}
+\input{es__12_8c}
+\input{es__14_8c}
+\input{es__18_8c}
+\input{es__21_8c}
+\input{es__21__ciclo__for_8c}
+\input{es__22_8c}
+\input{11-iterazione_2es__3_2es__3_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__3_2es__3_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__8_2es__3_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__3_2es__3_8c}
+\input{Array-Puntatori-Funzioni_2puntatori_2es__3_2es__3_8c}
+\input{file_2es__3_2es__3_8c}
+\input{fork_2es__3_2es__3_8c}
+\input{fork_2pipe_2es__3_2es__3_8c}
+\input{programmazione-di-sistema_2es__3_2es__3_8c}
+\input{systemcall-esercizi-base_2es__3_2es__3_8c}
+\input{systemcall-esercizi-base_2exec_2es__3_2es__3_8c}
+\input{es__30_8c}
+\input{11-iterazione_2es__7_2es__7_8c}
+\input{Array-Puntatori-Funzioni_2array_2es__7_2es__7_8c}
+\input{Array-Puntatori-Funzioni_2funzioni_2es__7_2es__7_8c}
+\input{programmazione-di-sistema_2es__7_2es__7_8c}
+\input{struct_2es__7_2es__7_8c}
+\input{es__10__V2_8c}
+\input{es__1__argv__argc_8c}
+\input{es__6__v2_8c}
+\input{es__3__asterisco_8c}
+\input{es__3__bis_8c}
+\input{es__4__scopri__gli__errori__e__correggili_8c}
+\input{es__2__V2_8c}
 \input{helloWord_8c}
+\input{es__2__senza__tee_8c}
+\input{es__5__due__processi_8c}
+\input{es__9__cat__only__P1_8c}
+\input{es__9__cat__p2_8c}
+\input{es__9__exec_8c}
 \input{README_8md}
+\input{es__1_2client_8c}
+\input{es__2_2client_8c}
+\input{es__4_2client_8c}
+\input{es__5_2client_8c}
+\input{es__6_2client_8c}
+\input{es__7_2client_8c}
+\input{es__1_2server_8c}
+\input{es__2_2server_8c}
+\input{es__4_2server_8c}
+\input{es__5_2server_8c}
+\input{es__6_2server_8c}
+\input{es__7_2server_8c}
+\input{clientRubrica_8c}
+\input{serverRubrica_8c}
+\input{serverRubricaConcorrente_8c}
+\input{soluzione__con__struct_8c}
+\input{soluzione__con__struct__v2_8c}
+\input{soluzione__senza__struc_8c}
+\input{es__4__funzioni_8c}
+\input{es__6__documentato__inglese_8c}
 %--- End generated contents ---
 
 % Index
