--- a/documentazione/latex/files.tex
+++ b/documentazione/latex/files.tex
@@ -3,26 +3,47 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{helloWord_8c}{hello\+Word.\+c}} }{\pageref{helloWord_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+1/\mbox{\hyperlink{10-if-e-cicli_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{10-if-e-cicli_2es__1_2es__1_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+10/\mbox{\hyperlink{10-if-e-cicli_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{10-if-e-cicli_2es__10_2es__10_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+11/\mbox{\hyperlink{10-if-e-cicli_2es__11_2es__11_8c}{es\+\_\+11.\+c}} }{\pageref{10-if-e-cicli_2es__11_2es__11_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+12/\mbox{\hyperlink{10-if-e-cicli_2es__12_2es__12_8c}{es\+\_\+12.\+c}} }{\pageref{10-if-e-cicli_2es__12_2es__12_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+13/\mbox{\hyperlink{es__13_8c}{es\+\_\+13.\+c}} }{\pageref{es__13_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+14/\mbox{\hyperlink{10-if-e-cicli_2es__14_2es__14_8c}{es\+\_\+14.\+c}} }{\pageref{10-if-e-cicli_2es__14_2es__14_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+15/\mbox{\hyperlink{es__15_8c}{es\+\_\+15.\+c}} }{\pageref{es__15_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+16/\mbox{\hyperlink{10-if-e-cicli_2es__16_2es__16_8c}{es\+\_\+16.\+c}} }{\pageref{10-if-e-cicli_2es__16_2es__16_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+2/\mbox{\hyperlink{10-if-e-cicli_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{10-if-e-cicli_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+3/\mbox{\hyperlink{10-if-e-cicli_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{10-if-e-cicli_2es__3_2es__3_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+4/\mbox{\hyperlink{10-if-e-cicli_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{10-if-e-cicli_2es__4_2es__4_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+5/\mbox{\hyperlink{10-if-e-cicli_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{10-if-e-cicli_2es__5_2es__5_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+6/\mbox{\hyperlink{10-if-e-cicli_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{10-if-e-cicli_2es__6_2es__6_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+6/\mbox{\hyperlink{es__6__V2_8c}{es\+\_\+6\+\_\+\+V2.\+c}} }{\pageref{es__6__V2_8c}}{}
+\item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+7/\mbox{\hyperlink{10-if-e-cicli_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{10-if-e-cicli_2es__7_2es__7_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+8/\mbox{\hyperlink{10-if-e-cicli_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{10-if-e-cicli_2es__8_2es__8_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+9/\mbox{\hyperlink{10-if-e-cicli_2es__9_2es__9_8c}{es\+\_\+9.\+c}} }{\pageref{10-if-e-cicli_2es__9_2es__9_8c}}{}
 \item\contentsline{section}{10-\/if-\/e-\/cicli/es\+\_\+9/\mbox{\hyperlink{es__9__puntatori_8c}{es\+\_\+9\+\_\+puntatori.\+c}} }{\pageref{es__9__puntatori_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+1/\mbox{\hyperlink{11-iterazione_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{11-iterazione_2es__1_2es__1_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+10/\mbox{\hyperlink{11-iterazione_2es__10_2es__10_8c}{es\+\_\+10.\+c}} }{\pageref{11-iterazione_2es__10_2es__10_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+11/\mbox{\hyperlink{11-iterazione_2es__11_2es__11_8c}{es\+\_\+11.\+c}} }{\pageref{11-iterazione_2es__11_2es__11_8c}}{}
-\item\contentsline{section}{11-\/iterazione/es\+\_\+12/\mbox{\hyperlink{es__12_8c}{es\+\_\+12.\+c}} }{\pageref{es__12_8c}}{}
-\item\contentsline{section}{11-\/iterazione/es\+\_\+14/\mbox{\hyperlink{es__14_8c}{es\+\_\+14.\+c}} }{\pageref{es__14_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+12/\mbox{\hyperlink{11-iterazione_2es__12_2es__12_8c}{es\+\_\+12.\+c}} }{\pageref{11-iterazione_2es__12_2es__12_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+14/\mbox{\hyperlink{11-iterazione_2es__14_2es__14_8c}{es\+\_\+14.\+c}} }{\pageref{11-iterazione_2es__14_2es__14_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+16/\mbox{\hyperlink{11-iterazione_2es__16_2es__16_8c}{es\+\_\+16.\+c}} }{\pageref{11-iterazione_2es__16_2es__16_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+17/\mbox{\hyperlink{es__17_8c}{es\+\_\+17.\+c}} }{\pageref{es__17_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+18/\mbox{\hyperlink{es__18_8c}{es\+\_\+18.\+c}} }{\pageref{es__18_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+19/\mbox{\hyperlink{es__19_8c}{es\+\_\+19.\+c}} }{\pageref{es__19_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+2/\mbox{\hyperlink{11-iterazione_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{11-iterazione_2es__2_2es__2_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+20/\mbox{\hyperlink{es__20_8c}{es\+\_\+20.\+c}} }{\pageref{es__20_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+21/\mbox{\hyperlink{es__21_8c}{es\+\_\+21.\+c}} }{\pageref{es__21_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+21/\mbox{\hyperlink{es__21__ciclo__for_8c}{es\+\_\+21\+\_\+ciclo\+\_\+for.\+c}} }{\pageref{es__21__ciclo__for_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+22/\mbox{\hyperlink{es__22_8c}{es\+\_\+22.\+c}} }{\pageref{es__22_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+23/\mbox{\hyperlink{es__23_8c}{es\+\_\+23.\+c}} }{\pageref{es__23_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+24/\mbox{\hyperlink{es__24_8c}{es\+\_\+24.\+c}} \\*Calcolo del numero di Bernoulli }{\pageref{es__24_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+25/\mbox{\hyperlink{es__25_8c}{es\+\_\+25.\+c}} }{\pageref{es__25_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+28/\mbox{\hyperlink{es__28A_8c}{es\+\_\+28\+A.\+c}} }{\pageref{es__28A_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+28/\mbox{\hyperlink{es__28B_8c}{es\+\_\+28\+B.\+c}} }{\pageref{es__28B_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+29/\mbox{\hyperlink{es__29_8c}{es\+\_\+29.\+c}} }{\pageref{es__29_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+3/\mbox{\hyperlink{11-iterazione_2es__3_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{11-iterazione_2es__3_2es__3_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+30/\mbox{\hyperlink{es__30_8c}{es\+\_\+30.\+c}} }{\pageref{es__30_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+31/\mbox{\hyperlink{es__31_8c}{es\+\_\+31.\+c}} }{\pageref{es__31_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+32/\mbox{\hyperlink{es__32_8c}{es\+\_\+32.\+c}} }{\pageref{es__32_8c}}{}
+\item\contentsline{section}{11-\/iterazione/es\+\_\+33/\mbox{\hyperlink{es__33_8c}{es\+\_\+33.\+c}} }{\pageref{es__33_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+4/\mbox{\hyperlink{11-iterazione_2es__4_2es__4_8c}{es\+\_\+4.\+c}} }{\pageref{11-iterazione_2es__4_2es__4_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+5/\mbox{\hyperlink{11-iterazione_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{11-iterazione_2es__5_2es__5_8c}}{}
 \item\contentsline{section}{11-\/iterazione/es\+\_\+6/\mbox{\hyperlink{11-iterazione_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{11-iterazione_2es__6_2es__6_8c}}{}
@@ -40,7 +61,7 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+5/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__5_2es__5_8c}{es\+\_\+5.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__5_2es__5_8c}}{}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+6/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__6_2es__6_8c}{es\+\_\+6.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__6_2es__6_8c}}{}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+7/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__7_2es__7_8c}{es\+\_\+7.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__7_2es__7_8c}}{}
-\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+8/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__8_2es__3_8c}{es\+\_\+3.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__8_2es__3_8c}}{}
+\item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/array/es\+\_\+8/\mbox{\hyperlink{Array-Puntatori-Funzioni_2array_2es__8_2es__8_8c}{es\+\_\+8.\+c}} }{\pageref{Array-Puntatori-Funzioni_2array_2es__8_2es__8_8c}}{}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+1/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__1_2es__1_8c}{es\+\_\+1.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__1_2es__1_8c}}{}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+1/\mbox{\hyperlink{es__1__argv__argc_8c}{es\+\_\+1\+\_\+argv\+\_\+argc.\+c}} }{\pageref{es__1__argv__argc_8c}}{}
 \item\contentsline{section}{Array-\/\+Puntatori-\/\+Funzioni/funzioni/es\+\_\+2/\mbox{\hyperlink{Array-Puntatori-Funzioni_2funzioni_2es__2_2es__2_8c}{es\+\_\+2.\+c}} }{\pageref{Array-Puntatori-Funzioni_2funzioni_2es__2_2es__2_8c}}{}
